[Fix] Sidebar white logo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <nav class="flex h-full w-full flex-col flex-wrap">
                 <div class="my-10 flex h-fit w-full justify-center">
                     <img
-                        src="./static/imgs/logo/logo-branca.png"
+                        src="src/static/imgs/logo/logo-branca.png"
                         alt="WHITE LOGO"
                         class="h-[100px] w-auto"
                     />
