--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- Sidebar section -->
         <div
-            class="flexw-full fixed -left-[770px] bottom-0 top-0 z-20 flex-row flex-wrap overflow-y-auto bg-font p-2 text-center transition-all duration-500 sm:hidden"
+            class="flexw-full fixed -left-[800px] bottom-0 top-0 z-20 flex-row flex-wrap overflow-y-auto bg-font p-2 text-center transition-all duration-500 sm:-left-[770px] sm:hidden"
             id="sidebar"
         >
             <nav class="flex h-full w-full flex-col flex-wrap">
