--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body class="bg-main">
         <!-- Header Section -->
         <header
-            class="flex h-24 items-center justify-center font-bahnschrift text-xl sm:bg-main sm:shadow-lg xl:text-2xl 2xl:h-32 2xl:text-3xl"
+            class="flex h-24 items-center justify-center font-bahnschrift text-xl sm:bg-main sm:shadow-lg md:text-2xl lg:text-2xl xl:text-2xl 2xl:h-32 2xl:text-3xl"
         >
             <!-- Navbar Section -->
             <nav
