--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="relative flex h-full w-full flex-col text-font">
                 <div class="">
                     <div class="flex h-full justify-center py-5">
-                        <h1 class="font-altone flex items-center text-7xl">
+                        <h1 class="flex items-center font-altone text-7xl">
                             Olá,
                         </h1>
                         <h2
@@ -180,7 +180,7 @@
                     >
                         Eu sou a
                     </h2>
-                    <h1 class="font-altone flex items-center text-6xl">
+                    <h1 class="flex items-center font-altone text-6xl">
                         Lara Pires
                     </h1>
                 </div>
